--- a/composer.json
+++ b/composer.json
@@ -12,12 +12,13 @@
         "php": "^8.0"
     },
     "require-dev": {
-        "doctrine/orm": "^2.9",
+        "doctrine/orm": "^2.10",
         "doctrine/mongodb-odm": "^2.2",
-        "friendsofphp/php-cs-fixer": "^3.1",
+        "friendsofphp/php-cs-fixer": "^3.2",
         "phpstan/phpstan": "^0.12",
         "symfony/framework-bundle": "^5.3",
         "symfony/lock": "^5.3",
+        "symfony/mercure": "^0.6",
         "symfony/messenger": "^5.3",
         "symfony/security-core": "^5.3",
         "symfony/security-csrf": "^5.3",
