--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "bacart/symfony-aware",
     "description": "Symfony service awareness library",
     "type": "library",
-    "minimum-stability": "beta",
+    "minimum-stability": "stable",
     "keywords": [
         "php",
         "symfony",
@@ -28,7 +28,10 @@
         "twig/twig": "^3.3"
     },
     "config": {
-        "sort-packages": true
+        "sort-packages": true,
+        "allow-plugins": {
+            "composer/package-versions-deprecated": true
+        }
     },
     "autoload": {
         "psr-4": {
