--- a/composer.json
+++ b/composer.json
@@ -2,29 +2,32 @@
     "name": "bacart/symfony-aware",
     "description": "Symfony service awareness library",
     "type": "library",
+    "license": "MIT",
     "minimum-stability": "stable",
+    "prefer-stable": true,
     "keywords": [
         "php",
         "symfony",
         "library"
     ],
-    "license": "MIT",
     "require": {
-        "php": "^8.1"
+        "php": ">=8.1"
     },
     "require-dev": {
-        "doctrine/orm": "^2.10",
-        "friendsofphp/php-cs-fixer": "^3.2",
-        "phpstan/phpstan": "^0.12",
-        "symfony/framework-bundle": "^5.4",
-        "symfony/lock": "^5.4",
+        "doctrine/orm": "^2.11",
+        "friendsofphp/php-cs-fixer": "^3.6",
+        "phpstan/phpstan": "^1.4",
+        "symfony/framework-bundle": "^6.0",
+        "symfony/lock": "6.0.*",
         "symfony/mercure": "^0.6",
-        "symfony/messenger": "^5.4",
-        "symfony/security-core": "^5.4",
-        "symfony/security-csrf": "^5.4",
-        "symfony/security-http": "^5.4",
-        "symfony/translation": "^5.4",
-        "symfony/validator": "^5.4",
+        "symfony/messenger": "6.0.*",
+        "symfony/security-core": "6.0.*",
+        "symfony/security-csrf": "6.0.*",
+        "symfony/security-http": "6.0.*",
+        "symfony/serializer": "6.0.*",
+        "symfony/translation": "6.0.*",
+        "symfony/validator": "6.0.*",
+        "roave/security-advisories": "dev-latest",
         "twig/twig": "^3.3"
     },
     "config": {
