--- a/composer.json
+++ b/composer.json
@@ -15,19 +15,21 @@
     },
     "require-dev": {
         "doctrine/orm": "^2.11",
+        "easycorp/easyadmin-bundle": "^4.0",
         "friendsofphp/php-cs-fixer": "^3.6",
         "phpstan/phpstan": "^1.4",
+        "roave/security-advisories": "dev-latest",
         "symfony/framework-bundle": "^6.0",
         "symfony/lock": "6.0.*",
         "symfony/mercure": "^0.6",
         "symfony/messenger": "6.0.*",
+        "symfony/property-access": "^6.0",
         "symfony/security-core": "6.0.*",
         "symfony/security-csrf": "6.0.*",
         "symfony/security-http": "6.0.*",
         "symfony/serializer": "6.0.*",
         "symfony/translation": "6.0.*",
         "symfony/validator": "6.0.*",
-        "roave/security-advisories": "dev-latest",
         "twig/twig": "^3.3"
     },
     "config": {
