--- a/composer.json
+++ b/composer.json
@@ -14,16 +14,16 @@
         "php": ">=8.1"
     },
     "require-dev": {
-        "doctrine/orm": "^2.11",
-        "easycorp/easyadmin-bundle": "^4.2",
-        "friendsofphp/php-cs-fixer": "^3.8",
-        "phpstan/phpstan": "^1.7",
+        "doctrine/orm": "^2.13",
+        "easycorp/easyadmin-bundle": "^4.4",
+        "friendsofphp/php-cs-fixer": "^3.13",
+        "phpstan/phpstan": "^1.9",
         "roave/security-advisories": "dev-latest",
-        "symfony/framework-bundle": "^6.0",
+        "symfony/framework-bundle": "6.1.*",
         "symfony/lock": "6.1.*",
         "symfony/mercure": "^0.6",
         "symfony/messenger": "6.1.*",
-        "symfony/property-access": "^6.0",
+        "symfony/property-access": "6.1.*",
         "symfony/security-core": "6.1.*",
         "symfony/security-csrf": "6.1.*",
         "symfony/security-http": "6.1.*",
