--- a/composer.json
+++ b/composer.json
@@ -18,10 +18,11 @@
         "php": ">=8.1"
     },
     "require-dev": {
-        "doctrine/orm": "^2.15",
+        "doctrine/annotations": "^2.0",
+        "doctrine/orm": "^2.16",
         "easycorp/easyadmin-bundle": "^4.7",
-        "ergebnis/composer-normalize": "^2.34",
-        "friendsofphp/php-cs-fixer": "^3.22",
+        "ergebnis/composer-normalize": "^2.36",
+        "friendsofphp/php-cs-fixer": "^3.26",
         "phpstan/phpstan": "^1.10",
         "roave/security-advisories": "dev-latest",
         "symfony/framework-bundle": "6.3.*",
