--- a/composer.json
+++ b/composer.json
@@ -19,24 +19,24 @@
     },
     "require-dev": {
         "doctrine/annotations": "^2.0",
-        "doctrine/orm": "^2.16",
+        "doctrine/orm": "^2.17",
         "easycorp/easyadmin-bundle": "^4.8",
-        "ergebnis/composer-normalize": "^2.39",
-        "friendsofphp/php-cs-fixer": "^3.37",
+        "ergebnis/composer-normalize": "^2.40",
+        "friendsofphp/php-cs-fixer": "^3.40",
         "phpstan/phpstan": "^1.10",
         "roave/security-advisories": "dev-latest",
-        "symfony/framework-bundle": "6.3.*",
-        "symfony/lock": "6.3.*",
+        "symfony/framework-bundle": "6.3.*|7.0.*",
+        "symfony/lock": "6.3.*|7.0.*",
         "symfony/mercure": "^0.6",
-        "symfony/messenger": "6.3.*",
-        "symfony/property-access": "6.3.*",
-        "symfony/security-core": "6.3.*",
-        "symfony/security-csrf": "6.3.*",
-        "symfony/security-http": "6.3.*",
-        "symfony/serializer": "6.3.*",
-        "symfony/translation": "6.3.*",
-        "symfony/validator": "6.3.*",
-        "twig/twig": "^3.7"
+        "symfony/messenger": "6.3.*|7.0.*",
+        "symfony/property-access": "6.3.*|7.0.*",
+        "symfony/security-core": "6.3.*|7.0.*",
+        "symfony/security-csrf": "6.3.*|7.0.*",
+        "symfony/security-http": "6.3.*|7.0.*",
+        "symfony/serializer": "6.3.*|7.0.*",
+        "symfony/translation": "6.3.*|7.0.*",
+        "symfony/validator": "6.3.*|7.0.*",
+        "twig/twig": "^3.8"
     },
     "minimum-stability": "stable",
     "prefer-stable": true,
