--- a/composer.json
+++ b/composer.json
@@ -21,21 +21,22 @@
         "doctrine/annotations": "^2.0",
         "doctrine/orm": "^2.17",
         "easycorp/easyadmin-bundle": "^4.8",
-        "ergebnis/composer-normalize": "^2.40",
-        "friendsofphp/php-cs-fixer": "^3.40",
+        "ergebnis/composer-normalize": "^2.41",
+        "friendsofphp/php-cs-fixer": "^3.48",
+        "knpuniversity/oauth2-client-bundle": "^2.18",
         "phpstan/phpstan": "^1.10",
         "roave/security-advisories": "dev-latest",
-        "symfony/framework-bundle": "6.3.*|7.0.*",
-        "symfony/lock": "6.3.*|7.0.*",
+        "symfony/framework-bundle": "~6.3.0 || ~7.0.0",
+        "symfony/lock": "~6.3.0 || ~7.0.0",
         "symfony/mercure": "^0.6",
-        "symfony/messenger": "6.3.*|7.0.*",
-        "symfony/property-access": "6.3.*|7.0.*",
-        "symfony/security-core": "6.3.*|7.0.*",
-        "symfony/security-csrf": "6.3.*|7.0.*",
-        "symfony/security-http": "6.3.*|7.0.*",
-        "symfony/serializer": "6.3.*|7.0.*",
-        "symfony/translation": "6.3.*|7.0.*",
-        "symfony/validator": "6.3.*|7.0.*",
+        "symfony/messenger": "~6.3.0 || ~7.0.0",
+        "symfony/property-access": "~6.3.0 || ~7.0.0",
+        "symfony/security-core": "~6.3.0 || ~7.0.0",
+        "symfony/security-csrf": "~6.3.0 || ~7.0.0",
+        "symfony/security-http": "~6.3.0 || ~7.0.0",
+        "symfony/serializer": "~6.3.0 || ~7.0.0",
+        "symfony/translation": "~6.3.0 || ~7.0.0",
+        "symfony/validator": "~6.3.0 || ~7.0.0",
         "twig/twig": "^3.8"
     },
     "minimum-stability": "stable",
@@ -51,5 +52,10 @@
             "ergebnis/composer-normalize": true
         },
         "sort-packages": true
+    },
+    "scripts": {
+        "post-update-cmd": [
+            "composer normalize"
+        ]
     }
 }
