--- a/composer.json
+++ b/composer.json
@@ -19,25 +19,26 @@
     },
     "require-dev": {
         "doctrine/annotations": "^2.0",
-        "doctrine/orm": "^2.17",
-        "easycorp/easyadmin-bundle": "^4.8",
-        "ergebnis/composer-normalize": "^2.41",
-        "friendsofphp/php-cs-fixer": "^3.48",
+        "doctrine/orm": "^2.19",
+        "easycorp/easyadmin-bundle": "^4.10",
+        "ergebnis/composer-normalize": "^2.42",
+        "friendsofphp/php-cs-fixer": "^3.58",
         "knpuniversity/oauth2-client-bundle": "^2.18",
-        "phpstan/phpstan": "^1.10",
+        "phpstan/phpstan": "^1.11",
         "roave/security-advisories": "dev-latest",
-        "symfony/framework-bundle": "~6.3.0 || ~7.0.0",
-        "symfony/lock": "~6.3.0 || ~7.0.0",
+        "symfony/framework-bundle": "^6.3 || ^7.0",
+        "symfony/lock": "^6.3 || ^7.0",
         "symfony/mercure": "^0.6",
-        "symfony/messenger": "~6.3.0 || ~7.0.0",
-        "symfony/property-access": "~6.3.0 || ~7.0.0",
-        "symfony/security-core": "~6.3.0 || ~7.0.0",
-        "symfony/security-csrf": "~6.3.0 || ~7.0.0",
-        "symfony/security-http": "~6.3.0 || ~7.0.0",
-        "symfony/serializer": "~6.3.0 || ~7.0.0",
-        "symfony/translation": "~6.3.0 || ~7.0.0",
-        "symfony/validator": "~6.3.0 || ~7.0.0",
-        "twig/twig": "^3.8"
+        "symfony/messenger": "^6.3 || ^7.0",
+        "symfony/property-access": "^6.3 || ^7.0",
+        "symfony/routing": "^6.3 || ^7.0",
+        "symfony/security-core": "^6.3 || ^7.0",
+        "symfony/security-csrf": "^6.3 || ^7.0",
+        "symfony/security-http": "^6.3 || ^7.0",
+        "symfony/serializer": "^6.3 || ^7.0",
+        "symfony/translation": "^6.3 || ^7.0",
+        "symfony/validator": "^6.3 || ^7.0",
+        "twig/twig": "^3.10"
     },
     "minimum-stability": "stable",
     "prefer-stable": true,
